[package]
name = "gdefs"
version = "0.1.0"
authors = ["Anders Musikka <anders@andersmusikka.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0"
lazy_static="1.4"
indexmap="1.6"
log="0.4"
byteorder="1.3"
ring = "0.16"
env_logger="0.7"